samples/_failures_safe/1761336066_7c744a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3d0e81ab.c:148: error: expected ‘;’, ‘,’ or ‘)’ at end of input
